--- a/front/css/style.css
+++ b/front/css/style.css
@@ -6,13 +6,25 @@ header h2{
 
 }
 */
+
+
+.navbar-header {
+    margin-left: 30px;
+}
+
 body{
 	/*background-color: #F6F6F6;*/
 	margin-top: 100px;
+	font-size: 16px;
 }
 
 .navbar h1{
 	font-weight: bold;
+}
+
+.navbar h2
+{
+	font-style: italic;
 }
 
 hr{
@@ -29,7 +41,7 @@ footer{
 .jumbotron{
 
 	background-color: #2B2B2B;
-	margin-top: -27px;
+	margin-top: -30px;
 }
 
 
@@ -57,7 +69,7 @@ footer{
 
 .page-header
 {
-	border-bottom: 3px solid #DE1B1B;
+	border-bottom: 6px solid #DE1B1B;
 }
 
 .page-header h1
