--- a/front/css/style.css
+++ b/front/css/style.css
@@ -26,6 +26,11 @@ body{
 {
 	font-style: italic;
 }
+.navbar-nav {
+    margin-top: 20px;
+    font-weight: bold;
+    padding-right: 20px;
+}
 
 hr{
 	border-color: #DE1B1B;
@@ -48,6 +53,11 @@ footer{
 .jumbotron h1{
 	color: #FFFFFF;
 	font-weight: bold;
+}
+
+.jumbotron h1.cursive-style
+{
+	font-size: 36px;
 }
 
 .jumbotron h2{
@@ -77,3 +87,28 @@ footer{
 	font-weight: bold;
 }
 
+
+.thumbnail h3
+{
+    /*color: #DE1B1B;*/
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 8px;
+    border-bottom: solid 1px #bbb;
+}
+
+h1.cursive-style{
+	font-size: 28px;
+}
+
+small, h2
+{
+	font-style: italic;
+}
+
+.cursive-style
+{
+	font: 400 100px/1.3 'Lobster Two', Helvetica, sans-serif;
+  	text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
+  	
+}
