--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -96,6 +96,8 @@ footer{
     text-align: center;
     padding-bottom: 8px;
     border-bottom: solid 1px #bbb;
+    height: 80px; 
+	overflow: hidden;
 }
 
 h1.cursive-style{
@@ -121,4 +123,24 @@ small, h2
 .coder
 {
 	margin-top: 50px;
+}
+
+.thumbnail .well { 
+	height: 85px; 
+	overflow: hidden; 
+	text-overflow: ellipsis;
+	text-overflow-multiline:ellipsis;
+} 
+
+.thumbnail h4 { 
+	height: 20px; 
+	overflow: hidden; 
+} 
+
+.section-title{
+	margin-left: 10px;
+}
+
+.content ul.skills-list {
+    line-height: 42px;
 }
