--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -13,5 +13,7 @@
 <body>
 	<div id="app"></div>
 	<script type="text/javascript" src="{% static "bundles/main.bundle.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/jquery-2.0.3.min.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
 </body>
 </html>
