stylin scroll targetting

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Victor's portfolio</title>
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/journal-bootstrap.min.css" %}">
 		
