--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,6 +3,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+	
 	<title>Victor's portfolio</title>
 	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/journal-bootstrap.min.css" %}">
