--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 	
 	<title>Victor's portfolio</title>
-	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+	<!-- <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}"> -->
 	<link rel="stylesheet" type="text/css" href="{% static "css/journal-bootstrap.min.css" %}">
 		
 	<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
 <body>
 	<div id="app"></div>
 	<script type="text/javascript" src="{% static "bundles/main.bundle.js" %}"></script>
-	<script type="text/javascript" src="{% static "js/jquery-2.0.3.min.js" %}"></script>
-	<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+	<!-- <script type="text/javascript" src="{% static "js/jquery-2.0.3.min.js" %}"></script> -->
+	<!-- <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script> -->
 </body>
 </html>
