Adding favicon, and github and linked information

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="">
 	
 	<title>Victor's portfolio</title>
+	<link rel="shortcut icon" href="{% static "images/favicon.ico" %}" type="image/x-icon">
+	<link rel="icon" href="{% static "images/favicon.ico" %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static "css/journal-bootstrap.min.css" %}">
 		
 	<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
